style: correct row gap

--- a/src/styles/mixins/_mixins-layout.scss
+++ b/src/styles/mixins/_mixins-layout.scss
@@ -6,7 +6,7 @@
   @include mq($to: large) {
     display: flex;
     flex-direction: column;
-    row-gap: px-to-rem(var(--section-inside-s));
+    row-gap: px-to-rem(var(--section-inside-m));
   }
 
   @include mq($from: large) {
